--- a/public/static/admin/css/welcome.css
+++ b/public/static/admin/css/welcome.css
@@ -13,6 +13,8 @@
 .label {display:inline;padding:.2em .6em .3em;font-size:75%;font-weight:700;line-height:1;color:#fff;text-align:center;white-space:nowrap;vertical-align:baseline;border-radius:.25em;margin-top: .3em;}
 .layui-red {color:red}
 .main_btn > p {height:40px;}
+.bold {font-weight: bold;}
+.overflow-auto {overflow: auto;}
 .layui-bg-number {background-color:#F8F8F8;}
 .layuimini-notice:hover {background:#f6f6f6;}
 .layuimini-notice {padding:7px 16px;clear:both;font-size:12px !important;cursor:pointer;position:relative;transition:background 0.2s ease-in-out;}
