Mod: 增加搜索框内容清除功能

--- a/public/static/admin/css/public.css
+++ b/public/static/admin/css/public.css
@@ -75,6 +75,10 @@ body {
     padding: 0;
 }
 
+.form-search .layui-input-affix {
+    line-height: 32px;
+}
+
 .form-search xm-select {
     min-height: 32px;
     line-height: 32px;
