--- a/public/static/admin/css/public.css
+++ b/public/static/admin/css/public.css
@@ -47,15 +47,15 @@ body {
 
 .form-search .layui-btn {
     height: 32px;
-    line-height: 28px;
-    font-size: 12px;
+    line-height: 32px;
     padding: 0 10px;
+    font-size: 12px;
 }
 
 .form-search .layui-form-label {
-    padding: 0 8px;
     height: 32px;
-    line-height: 30px;
+    line-height: 32px;
+    padding: 0 8px;
 }
 
 .form-search .layui-input-inline {
@@ -66,8 +66,12 @@ body {
 .form-search .layui-input-inline select {
     width: 100%;
     height: 32px;
+    line-height: 32px;
     padding: 2px 8px;
-    line-height: 1em;
+}
+
+.form-search .layui-input-affix {
+    line-height: 32px;
 }
 
 .form-search .layui-form-select dl {
@@ -75,23 +79,22 @@ body {
     padding: 0;
 }
 
-.form-search .layui-input-affix {
-    line-height: 32px;
-}
-
 .form-search xm-select {
-    min-height: 32px;
-    line-height: 32px;
-    margin: 0 -1px -1px 0;
+    width: 170px;
     box-sizing: border-box;
+    margin: 0 !important;
 }
 
-.form-search xm-select > .xm-label .xm-label-block {
-    margin: 0 5px 2px 0;
+.form-search xm-select:hover {
+    border-color: #d2d2d2;
 }
 
 .form-search xm-select > .xm-tips {
     padding: 0 8px;
+}
+
+.form-search xm-select > .xm-label .xm-label-block {
+    margin: 1px 5px 2px 0;
 }
 
 
