Fix: 修复非超管首页访问信息展示报错问题

--- a/app/admin/view/index/welcome.html
+++ b/app/admin/view/index/welcome.html
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                     </div>
-                    {if isset($systemInfo)}
+                    {if $isSuperAdmin}
                     <!-- 系统信息 -->
                     <div class="layui-col-md12">
                         <div class="layui-card">
