--- a/public/static/plugs/lay-module/treetable-lay/treetable.css
+++ b/public/static/plugs/lay-module/treetable-lay/treetable.css
@@ -11,8 +11,16 @@
     content: "\e623";
 }
 
+.treeTable-icon .layui-icon-folder:before {
+    content: "\eabe";
+}
+
 .treeTable-icon.open .layui-icon-triangle-d:before {
     content: "\e625";
     background-color: transparent;
+}
+
+.treeTable-icon.open .layui-icon-folder:before {
+    content: "\eac1";
 }
 
